--- a/web/index.html
+++ b/web/index.html
@@ -31,8 +31,23 @@
 
   <title>pro_resume</title>
   <link rel="manifest" href="manifest.json">
+  <style>
+      .container {
+        width: 100vw;
+        height: 100vh;
+        display: flex; /* Default Axis is X*/
+        justify-content: center; /* Main Axis */
+        align-items: center; /* Cross Axis */
+      }
+      .indicator{
+        width: 50vw;
+      }
+</style>
 </head>
-<body>
+<body style="overflow: hidden">
+<div id="loading_indicator" class="container">
+  <img class="indicator" src="./assets/loadingBlob.gif">
+</div>
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
@@ -123,6 +138,16 @@
   };
   firebase.initializeApp(firebaseConfig);
   firebase.analytics();
+</script>
+<script>
+  window.onload = function () {
+        setTimeout(function () {
+          var loadingIndicator =                 document.getElementById("loading_indicator");
+          if (loadingIndicator) {
+            loadingIndicator.remove();
+          }
+        }, 10000);
+};
 </script>
 </body>
 </html>
